--- a/flip.css
+++ b/flip.css
@@ -19,33 +19,23 @@
     margin-left: 28px;
     margin-top: 12px;
 }
-.search{
-    background-color: #F0F5FF;
+.searchbar{
+    background-color: #f0f5ff;
     flex: 1;
-    max-width: 750px;
     display: flex;
-    gap: 10px;
-    height: 40px;
-    margin-top: 14px;
     border-radius: 10px;
+    align-items: center;
+    padding: 10px 20px;
 }
-.search input{
-    border: none;
-    background-color: #F0F5FF;
-    width: 952px;
-    font-size: 18px;
-    outline: none;
-    border-radius: 5px;
-    font-size: 17.5px;
+.searchbar>input[type="search"]{
+    border:0;
+    outline:0;
+    font-size:22px;
+    font-family: sans-serif;
+    font-weight: 200;
+    background-color: transparent;
+}
 
-}
-.search img,button{
-    width: 40px;
-    height: 38px;
-    border: none;
-    background-color: #F0F5FF;
-    border-radius: 5px;
-}
 .login{
     display: flex;
     place-items:center;
